Issue #3183392 by mathiasgmeiner: Paragraphs: wrong width

--- a/styles/components/_paragraphs.scss
+++ b/styles/components/_paragraphs.scss
@@ -64,6 +64,10 @@
 
       td {
         padding: .25rem;
+
+        + td {
+          width: 100%;
+        }
       }
 
       .td__order {
